--- a/requirements.txt
+++ b/requirements.txt
@@ -1,173 +1,188 @@
 absl-py==0.7.1
-alabaster==0.7.12
+amqp==2.4.0
+ansimarkup==1.4.0
+anyjson==0.3.3
+apturl==0.5.2
 asn1crypto==0.24.0
 astor==0.8.0
-atomicwrites==1.3.0
+astroid==2.1.0
 attrs==19.1.0
-audioread==2.1.8
-Babel==2.7.0
-backports-abc==0.5
-backports.functools-lru-cache==1.5
-backports.shutil-get-terminal-size==1.0.0
-backports.weakref==1.0.post1
+backcall==0.1.0
+beautifulsoup4==4.7.1
+better-exceptions-fork==0.2.1.post6
+billiard==3.6.0.0
 bleach==3.1.0
-certifi==2019.6.16
-cffi==1.12.3
+blinker==1.4
+Brlapi==0.6.7
+celery==4.2.1
+certifi==2018.8.24
 chardet==3.0.4
 Click==7.0
-cloudpickle==1.2.1
+cloudpickle==0.6.1
 colorama==0.4.1
-configparser==3.7.4
-contextlib2==0.5.5
+coloredlogs==10.0
+command-not-found==0.3
 cryptography==2.3
-css==0.1
+cupshelpers==1.0
 cycler==0.10.0
-dask==1.2.2
+dask==1.0.0
 decorator==4.4.0
+defer==1.0.6
 defusedxml==0.6.0
-distributed==1.28.1
-Django==1.11.23
-dlib==19.17.0
-docutils==0.15.2
+distro==1.3.0
+distro-info===0.21ubuntu2
+dj-database-url==0.5.0
+Django==2.1.7
+docopt==0.6.2
 entrypoints==0.3
-enum34==1.1.6
-faulthandler==3.1
-filelock==3.0.12
-Flask==1.1.1
-flatbuffers==1.11
-funcsigs==1.0.2
-functools32==3.2.3.post2
-future==0.17.1
-futures==3.2.0
+ephem==3.7.6.0
+et-xmlfile==1.0.1
+flake8==3.6.0
+flake8-polyfill==1.0.2
+fuzzywuzzy==0.17.0
 gast==0.2.2
 google-pasta==0.1.7
 grpcio==1.21.1
-gyp==0.1
+gunicorn==19.9.0
 h5py==2.9.0
-HeapDict==1.0.0
+html5lib==1.0.1
+httplib2==0.11.3
+humanfriendly==4.17
 idna==2.6
 imageio==2.5.0
-imagesize==1.1.0
 imgaug==0.2.9
-importlib-metadata==0.19
 imutils==0.5.2
-ipaddress==1.0.17
-ipykernel==4.10.0
-ipyparallel==6.2.4
-ipython==5.8.0
+ipykernel==5.1.1
+ipython==7.5.0
 ipython-genutils==0.2.0
 ipywidgets==7.4.2
+isort==4.3.4
 itsdangerous==1.1.0
+jdcal==1.4
+jedi==0.13.3
 Jinja2==2.10.1
 joblib==0.13.2
+jsonpickle==0.9.6
 jsonschema==3.0.1
 jupyter==1.0.0
-jupyter-client==5.3.1
-jupyter-console==5.2.0
-jupyter-core==4.5.0
+jupyter-client==5.2.4
+jupyter-console==6.0.0
+jupyter-core==4.4.0
 Keras==2.2.4
 Keras-Applications==1.0.8
 Keras-Preprocessing==1.1.0
 keyring==17.1.1
 keyrings.alt==3.1.1
 kiwisolver==1.1.0
-librosa==0.7.0
-llvmlite==0.29.0
-locket==0.2.0
+kombu==4.2.1
+language-selector==0.1
+launchpadlib==1.10.6
+lazr.restfulclient==0.14.2
+lazr.uri==1.0.3
+lazy-object-proxy==1.3.1
+llvmlite==0.26.0
+loguru==0.2.5
+louis==3.8.0
+lxml==4.3.3
+macaroonbakery==1.2.1
+Mako==1.0.7
 Markdown==3.1.1
-MarkupSafe==1.1.1
-matplotlib==2.0.2
+MarkupSafe==1.1.0
+matplotlib==3.1.0
+mccabe==0.6.1
 mistune==0.8.4
-mock==3.0.5
-modin==0.5.4
-more-itertools==5.0.0
-msgpack==0.6.1
-nbconvert==5.6.0
+munch==2.3.2
+nbconvert==5.5.0
 nbformat==4.4.0
+netifaces==0.10.4
 networkx==2.2
-nltk==3.4.3
-nose==1.3.7
+nltk==3.4
 notebook==5.7.8
-np-utils==0.5.10.0
-numba==0.45.0
+numba==0.41.0
+numexpr==2.6.8
 numpy==1.16.4
+oauthlib==2.1.0
+olefile==0.46
 opencv-python==4.1.0.25
-packaging==19.1
+openpyxl==2.5.12
 pandas==0.24.2
 pandocfilters==1.4.2
-partd==1.0.0
-pathlib2==2.3.3
-pexpect==4.7.0
+parso==0.4.0
+pexpect==4.6.0
 pickleshare==0.7.5
-Pillow==6.0.0
-plotly==4.0.0
-pluggy==0.12.0
+Pillow==5.4.1
 prometheus-client==0.7.0
-prompt-toolkit==1.0.16
-protobuf==3.8.0
-psutil==5.6.3
-psycopg2==2.7.7
+prompt-toolkit==2.0.9
+protobuf==3.6.1
 ptyprocess==0.6.0
-py==1.8.0
-pycairo==1.18.1
-pycparser==2.19
+py-cpuinfo==4.0.0
+pycairo==1.16.2
+pycodestyle==2.4.0
 pycrypto==2.6.1
+pycups==1.9.73
+pyflakes==2.0.0
 Pygments==2.4.2
 PyGObject==3.32.0
+PyJWT==1.7.0
+pylint==2.2.2
+pymacaroons==0.13.0
+pymongo==3.7.2
+PyNaCl==1.3.0
 pyparsing==2.4.0
+PyQt5==5.12.1
+pyRFC3339==1.1
 pyrsistent==0.15.2
-pytest==4.6.5
-python-dateutil==2.8.0
-pytz==2019.1
+pytesseract==0.2.7
+python-apt==1.8.4
+python-dateutil==2.7.3
+python-debian==0.1.34
+python-memcached==1.58
+pytz==2018.7
 PyWavelets==1.0.3
 pyxdg==0.25
-PyYAML==5.1.1
+PyYAML==3.13
 pyzmq==18.0.1
 qtconsole==4.5.1
-ray==0.7.1
-redis==3.3.6
-requests==2.22.0
-resampy==0.2.1
-retrying==1.3.3
-scandir==1.10.0
-scikit-image==0.14.3
-scikit-learn==0.20.3
-scipy==1.2.2
+reportlab==3.5.18
+requests==2.21.0
+requests-unixsocket==0.1.5
+sacred==0.7.4
+scikit-image==0.15.0
+scikit-learn==0.21.2
+scipy==1.3.0
 seaborn==0.9.0
 SecretStorage==2.3.1
 Send2Trash==1.5.0
 Shapely==1.6.4.post2
 simplegeneric==0.8.1
+simplejson==3.16.0
 singledispatch==3.4.0.3
 six==1.12.0
-sklearn==0.0
-snowballstemmer==1.9.0
-sortedcontainers==2.1.0
-SoundFile==0.10.2
-Sphinx==1.8.5
-sphinxcontrib-websupport==1.1.2
-sql==0.4.0
-subprocess32==3.5.4
-swifter==0.290
-tblib==1.4.0
+soupsieve==1.8
+system-service==0.3
+systemd-python==234
 tensorboard==1.14.0
 tensorflow==1.14.0
 tensorflow-estimator==1.14.0
 termcolor==1.1.0
 terminado==0.8.2
-testfixtures==6.10.0
 testpath==0.4.2
-toolz==0.10.0
-tornado==5.1.1
-tqdm==4.32.2
+tornado==6.0.2
 traitlets==4.3.2
-typing==3.7.4
-urllib3==1.25.3
+ubuntu-advantage-tools==19.2
+ubuntu-drivers-common==0.0.0
+ufw==0.36
+unattended-upgrades==0.1
+urllib3==1.24.1
+usb-creator==0.3.3
+vine==1.1.4
+virtualenv==16.6.0
+wadllib==1.3.3
 wcwidth==0.1.7
 webencodings==0.5.1
 Werkzeug==0.15.4
+whitenoise==4.1.2
 widgetsnbextension==3.4.2
-wrapt==1.11.2
+wrapt==1.11.1
+xkit==0.0.0
 xlrd==1.2.0
-zict==1.0.0
-zipp==0.5.2
