--- a/requirements.txt
+++ b/requirements.txt
@@ -33,12 +33,14 @@ distro==1.3.0
 distro-info===0.21ubuntu2
 dj-database-url==0.5.0
 Django==2.1.7
+dlib==19.17.0
 docopt==0.6.2
 entrypoints==0.3
 ephem==3.7.6.0
 et-xmlfile==1.0.1
 flake8==3.6.0
 flake8-polyfill==1.0.2
+Flask==1.1.1
 fuzzywuzzy==0.17.0
 gast==0.2.2
 google-pasta==0.1.7
@@ -103,6 +105,7 @@ numexpr==2.6.8
 numpy==1.16.4
 oauthlib==2.1.0
 olefile==0.46
+opencv-contrib-python==4.1.0.25
 opencv-python==4.1.0.25
 openpyxl==2.5.12
 pandas==0.24.2
@@ -157,6 +160,7 @@ Shapely==1.6.4.post2
 simplegeneric==0.8.1
 simplejson==3.16.0
 singledispatch==3.4.0.3
+sip==4.19.8
 six==1.12.0
 soupsieve==1.8
 system-service==0.3
