--- a/requirements.txt
+++ b/requirements.txt
@@ -3,11 +3,14 @@ astor==0.8.0
 attrs==19.1.0
 backcall==0.1.0
 bleach==3.1.0
+Click==7.0
 cycler==0.10.0
 decorator==4.4.0
 defusedxml==0.6.0
 dlib==19.17.0
 entrypoints==0.3
+enum34==1.1.6
+Flask==1.1.1
 gast==0.2.2
 google-pasta==0.1.7
 grpcio==1.23.0
@@ -16,6 +19,7 @@ ipykernel==5.1.2
 ipython==7.8.0
 ipython-genutils==0.2.0
 ipywidgets==7.5.1
+itsdangerous==1.1.0
 jedi==0.15.1
 Jinja2==2.10.1
 jsonschema==3.0.2
@@ -23,6 +27,7 @@ jupyter==1.0.0
 jupyter-client==5.3.1
 jupyter-console==6.0.0
 jupyter-core==4.5.0
+jupyter-http-over-ws==0.0.6
 Keras==2.2.5
 Keras-Applications==1.0.8
 Keras-Preprocessing==1.1.0
